--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "trylam",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "trylam.js",
   "scripts": {
     "test": "echo \"I like your style, but no.\" && exit 1"
   },
-  "keywords": ["lambda", "cloud"],
-  "type":"module",
+  "keywords": [
+    "lambda",
+    "cloud"
+  ],
+  "type": "module",
   "author": "Tim Crowley",
   "license": "MIT",
-  "description": "Run a Lambda function locally before you run it in the cloud",
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.1"
-  }
+  "description": "Run a Lambda function locally before you run it in the cloud"
 }
